--- a/index.html
+++ b/index.html
@@ -1,45 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body class="index_body">
     <header>
-        <div class="logo_div">
+        <div class="logo_div inline_block">
             <a href="index.html"><img  class="logo" src="imgs/Group5.svg" alt="html_logo"></a>
         </div>
-        <nav class="main_nav">
+        <nav class="main_nav inline_block" >
             <ul>
-                <li><a class="first_li" href="index.html">მთავარი</a></li>
-                <li> <a href="news.html">სიახლეები</a></li>
-                <li><a href="contact.html">კონტაქტი</a></li> 
+                <li  class="inline_block"><a class="first_li" href="index.html">მთავარი</a></li>
+                <li class="inline_block"> <a href="news.html">სიახლეები</a></li>
+                <li class="inline_block"><a href="contact.html">კონტაქტი</a></li> 
             </ul>
         </nav>
     </header>
-    <main>
-        <div>
-            <img src="imgs/banner-img.png" alt="banner">
+    <main class=" index_main">
+        <div class="banner_div ">
+            <img class="banner" src="imgs/banner-img.png" alt="banner">
         </div>
-        <div class="app_section">
-            <h3>FEATURED | view all featured media</h3>
-            <div first_section>
-                <h4></h4>
-                <img src="#" alt="#">
-                <p></p>
-            </div>
-            <div second_section>
-                <h4></h4>
-                <img src="#" alt="#">
-                <p></p>
-
-            </div>
+        
+        <div class="articletitle" >
+            <h3 class="titleofarticle">FEATURED | view all featured media</h3>
         </div>
+            <div class="app_section">
+                <article class=" articles first_section inline_block"> 
+                    <h4>RESPONSIVE WEB DESIGN</h4>
+                    <img class="inline_block" src="imgs/Group 10.svg" alt="touch_log"> 
+                    <p  class="inline_block article_text" >approach that suggests that design and development should respond to the user's behavior and environment based on screen size, platform and orientation.</p> 
+                </article>
+                <article class="articles second_section inline_block" > 
+                    <h4>APP DEVELOPMENT</h4>
+                    <img  class="inline_block"  src="imgs/Path 28.svg" alt="mob_log">
+                    <p  class="inline_block article_text" >Mobile application development is the process of making or creating a mobile application to run on various mobile platforms. A mobile platform is a mobile operating system.</p>
+               </article>
+            </div>
     </main>
+
     <footer>
         <div class="facebook inline_block">
             <a href="#"><img src="imgs/fb.svg" alt="fb_logo"></a>
@@ -48,5 +51,6 @@
             <a href="#"><img src="imgs/you.svg" alt="tube_logo"></a>
         </div>
     </footer>
+
 </body>
 </html>
