--- a/news.html
+++ b/news.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,14 +10,14 @@
 </head>
 <body>
     <header>
-        <div class="logo_div">
-            <a href="index.html"><img  class="logo" src="imgs/Group5.svg" alt="html_logo"></a>
+        <div class="logo_div inline_block">
+            <a href="index.html"><img  class="logo inline_block" src="imgs/Group5.svg" alt="html_logo"></a>
         </div>
-        <nav class="main_nav">
+        <nav class="main_nav inline_block">
             <ul>
-                <li><a  href="index.html">მთავარი</a></li>
-                <li> <a class="second_li" href="news.html">სიახლეები</a></li>
-                <li><a href="contact.html">კონტაქტი</a></li> 
+                <li class="inline_block"><a href="index.html">მთავარი</a></li>
+                <li class="inline_block"> <a class="second_li" href="news.html">სიახლეები</a></li>
+                <li class="inline_block"><a href="contact.html">კონტაქტი</a></li> 
             </ul>
         </nav>
     </header>
