--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
             <div class="app_section">
                 <article class=" articles first_section inline_block"> 
                     <h4>RESPONSIVE WEB DESIGN</h4>
-                    <img class="inline_block" src="imgs/Group 10.svg" alt="touch_log"> 
+                    <img class="inline_block imgs_article" src="imgs/Group 10.svg" alt="touch_log"> 
                     <p  class="inline_block article_text" >approach that suggests that design and development should respond to the user's behavior and environment based on screen size, platform and orientation.</p> 
                 </article>
                 <article class="articles second_section inline_block" > 
                     <h4>APP DEVELOPMENT</h4>
-                    <img  class="inline_block"  src="imgs/Path 28.svg" alt="mob_log">
+                    <img  class="inline_block imgs_article"  src="imgs/Path 28.svg" alt="mob_log">
                     <p  class="inline_block article_text" >Mobile application development is the process of making or creating a mobile application to run on various mobile platforms. A mobile platform is a mobile operating system.</p>
                </article>
             </div>
