--- a/news.html
+++ b/news.html
@@ -22,25 +22,27 @@
         </nav>
     </header>
     <main>
-        <article class="news_article">
+        <div class="news_container">
+            <section>
             <div class="date_div">
                27
                <p class="date_month">მაისი </p>
             </div>
-            <br>
             <div class="article_text">
                 <h3 class="margin"> ლორემ იპსუმ ჩაუმალა დასრესა ორპირო ულბობდა რომანსი გაგაკოტრებ</h3>
-                <img class="margin article_img inline_block" src="imgs/Image.png" alt="article_photo">
-                <p class="margin inline_block">  ლორემ იპსუმ ჩაუმალა დასრესა ორპირო ულბობდა რომანსი გაგაკოტრებ, გაშენებული ფილმებშიო მოფიქრებულ მცირე მეგრელს გირეკავენ ბრინკა მოფარფატე პაოლო. ვარსკვლავი მკითხავი გაფითრდა მოადგილე გამოუშვას მოფიქრებულ, ადამიანებიც გინდ სარეცხი. გავარდნილი უნივერსიტეტის კინოსადმი ბრინკა შევცდით ორპირო დაკავებული, რეზინის დასჩემდა მოადგილე თავისიანებს. მკითხავი ძნით სდუმდა დასჩემდა, მეგრელს დასრესა ურემსაო ადამიანებიც. ნეკრასოვმა იყარა ანტენას მოფარფატე გადასარევი, ადამიანებიც გინდ დაჭკნეს, ნდობით პროპორციაზე. აზიაროს წარბს ცათასა ფილმებშიო ბახის ვარსკვლავი უფლსწულს დამვიწყებოდა.
+                <div>
+                    <img class="margin article_img inline_block" src="imgs/Image.png" alt="article_photo">
+                    <p class="margin inline_block">  ლორემ იპსუმ ჩაუმალა დასრესა ორპირო ულბობდა რომანსი გაგაკოტრებ, გაშენებული ფილმებშიო მოფიქრებულ მცირე მეგრელს გირეკავენ ბრინკა მოფარფატე პაოლო. ვარსკვლავი მკითხავი გაფითრდა მოადგილე გამოუშვას მოფიქრებულ, ადამიანებიც გინდ სარეცხი. გავარდნილი უნივერსიტეტის კინოსადმი ბრინკა შევცდით ორპირო დაკავებული, რეზინის დასჩემდა მოადგილე თავისიანებს. მკითხავი ძნით სდუმდა დასჩემდა, მეგრელს დასრესა ურემსაო ადამიანებიც. ნეკრასოვმა იყარა ანტენას მოფარფატე გადასარევი, ადამიანებიც გინდ დაჭკნეს, ნდობით პროპორციაზე. აზიაროს წარბს ცათასა ფილმებშიო ბახის ვარსკვლავი უფლსწულს დამვიწყებოდა.
                      ანტენას წარმოუჩინოს ულბობდა, განათლებასაც ორმოცფუტიან, გადაგიხდის საქციელსაც რეზინის იყარა.
-                   <br> <br>
-                   ამოიკითხავ დავიწყებულ გავრბივარ უფროსიც ჩაიტანეს ბედისწერასა წახემსება. აფეთქდი ჩიბუხები გოჭების, ნაძირლებმა გაუნათლებლის იშოვა მორჩილის, უფროსიც იხარხაროთ ადმინისტრატორი ღობესავით უმცირესობა. წაგართმევენო ბაბუებს მოვაწერე სენდვიჩზე პროკურატურაში საყვარელსა, კუნძს ადგილ გენდერული იხარხაროთ. ახლადგათავისუფლებულ მსურდა სახეებისა შინაარსი ნაძირლებმა საიდგანღაც წევრის ქაჯები, ჩავიდინე ვაჟკაცობა ბევრჯელ. გირჩევნიათ ილუზიონში ბენის დავიწყებულ პანელზე, ტელემაყურებელი მარჩელო შმაგი. გამოუყვია სენდვიჩზე საწყაოდ, მოედებოდე ტელემაყურებელი, ამოიკითხავ სიფრთხილის მეზობლების. მორჩილის ჩავიდინე თაფლისფერთვალება დანაკარგის გაუნათლებლის კუნძს გაუწყრებოდა შმაგი. საზღვარზე გაუნათლებლის მოვაწერე ამოებით სხვადასხვაგვარი, საიდგანღაც ბაბუებს, გათედა გაუშიშვლეს, ადგილ წევრის კონიაკისა. 
-                   დალაგებული საზღვარზე გააერთიანა კონიაკისა, მოვაწერე დღითი დებატებმა კანკალებს საღამოები გამოფინეს თქვე.
+                    <br> <br>
+                    ამოიკითხავ დავიწყებულ გავრბივარ უფროსიც ჩაიტანეს ბედისწერასა წახემსება. აფეთქდი ჩიბუხები გოჭების, ნაძირლებმა გაუნათლებლის იშოვა მორჩილის, უფროსიც იხარხაროთ ადმინისტრატორი ღობესავით უმცირესობა. წაგართმევენო ბაბუებს მოვაწერე სენდვიჩზე პროკურატურაში საყვარელსა, კუნძს ადგილ გენდერული იხარხაროთ. ახლადგათავისუფლებულ მსურდა სახეებისა შინაარსი ნაძირლებმა საიდგანღაც წევრის ქაჯები, ჩავიდინე ვაჟკაცობა ბევრჯელ. გირჩევნიათ ილუზიონში ბენის დავიწყებულ პანელზე, ტელემაყურებელი მარჩელო შმაგი. გამოუყვია სენდვიჩზე საწყაოდ, მოედებოდე ტელემაყურებელი, ამოიკითხავ სიფრთხილის მეზობლების. მორჩილის ჩავიდინე თაფლისფერთვალება დანაკარგის გაუნათლებლის კუნძს გაუწყრებოდა შმაგი. საზღვარზე გაუნათლებლის მოვაწერე ამოებით სხვადასხვაგვარი, საიდგანღაც ბაბუებს, გათედა გაუშიშვლეს, ადგილ წევრის კონიაკისა. 
+                    დალაგებული საზღვარზე გააერთიანა კონიაკისა, მოვაწერე დღითი დებატებმა კანკალებს საღამოები გამოფინეს თქვე.
                     <br> <br>
                     დაგაწერა საზარელი ფათურით მძულვარებით იუწყებოდა გუმანმა ვარცხნით გამიკეთებიაო მოიღრიჯა დაცქვიტა დიდძალი, ასლან მოეჩვენათ მოისმენდნენ. გათავება მთავრობას წამსვე,
                     სასწაულმოქმედი გააქტიურდა მოეჩვენათ მაგასაც გასაპატიოსნებლად, მარლონ იუწყებოდა დაიხრჩობოდა ჩანგლით დაცქვიტა შენის. დიდძალი ტვირთის ფრანგებს დამალოს ორისავე გადაარჩინოს მარლონ იმსჯელოთ, ღარიბ ვეფხს, ვარცხნით მრავლდებოდნენ მგლოვარენი, ბავშვობის წამოხვალ
-               </p>
-
+                    </p>
+                </div>
+            </section>
             </div>
        </article>
 
@@ -55,7 +57,7 @@
                <img class="margin article_img inline_block" src="imgs/image2.png" alt="article_photo">
                <p class="margin inline_block">  ლორემ იპსუმ ჩაუმალა დასრესა ორპირო ულბობდა რომანსი გაგაკოტრებ, გაშენებული ფილმებშიო მოფიქრებულ მცირე მეგრელს გირეკავენ ბრინკა მოფარფატე პაოლო. ვარსკვლავი მკითხავი გაფითრდა მოადგილე გამოუშვას მოფიქრებულ, ადამიანებიც გინდ სარეცხი. გავარდნილი უნივერსიტეტის კინოსადმი ბრინკა შევცდით ორპირო დაკავებული, რეზინის დასჩემდა მოადგილე თავისიანებს. მკითხავი ძნით სდუმდა დასჩემდა, მეგრელს დასრესა ურემსაო ადამიანებიც. ნეკრასოვმა იყარა ანტენას მოფარფატე გადასარევი, ადამიანებიც გინდ დაჭკნეს, ნდობით პროპორციაზე. აზიაროს წარბს ცათასა ფილმებშიო ბახის ვარსკვლავი უფლსწულს დამვიწყებოდა.
                    ანტენას წარმოუჩინოს ულბობდა, განათლებასაც ორმოცფუტიან, გადაგიხდის საქციელსაც რეზინის იყარა.
-                 <br> <br>
+           ,m      <br> <br>
                  ამოიკითხავ დავიწყებულ გავრბივარ უფროსიც ჩაიტანეს ბედისწერასა წახემსება. აფეთქდი ჩიბუხები გოჭების, ნაძირლებმა გაუნათლებლის იშოვა მორჩილის, უფროსიც იხარხაროთ ადმინისტრატორი ღობესავით უმცირესობა. წაგართმევენო ბაბუებს მოვაწერე სენდვიჩზე პროკურატურაში საყვარელსა, კუნძს ადგილ გენდერული იხარხაროთ. ახლადგათავისუფლებულ მსურდა სახეებისა შინაარსი ნაძირლებმა საიდგანღაც წევრის ქაჯები, ჩავიდინე ვაჟკაცობა ბევრჯელ. გირჩევნიათ ილუზიონში ბენის დავიწყებულ პანელზე, ტელემაყურებელი მარჩელო შმაგი. გამოუყვია სენდვიჩზე საწყაოდ, მოედებოდე ტელემაყურებელი, ამოიკითხავ სიფრთხილის მეზობლების. მორჩილის ჩავიდინე თაფლისფერთვალება დანაკარგის გაუნათლებლის კუნძს გაუწყრებოდა შმაგი. საზღვარზე გაუნათლებლის მოვაწერე ამოებით სხვადასხვაგვარი, საიდგანღაც ბაბუებს, გათედა გაუშიშვლეს, ადგილ წევრის კონიაკისა. 
                  დალაგებული საზღვარზე გააერთიანა კონიაკისა, მოვაწერე დღითი დებატებმა კანკალებს საღამოები გამოფინეს თქვე.
                   <br> <br>
